--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "firebase": "^9.19.1",
+    "firebase-functions": "^4.3.0",
     "firebase-tools": "^11.25.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
