--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "firebase": "^9.19.1",
     "firebase-functions": "^4.3.0",
     "firebase-tools": "^11.25.3",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-moment": "^1.1.3",
     "react-player": "^2.11.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
