--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^2.7.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.2.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-moment": "^1.1.3",
     "react-player": "^2.11.2",
